<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:paddingTop="10dp"
        android:layout_marginStart="15dp"
        android:text="@string/acro_connect_2"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card1"
        android:elevation="10dp"
        android:layout_margin="10dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_StudentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/firstname"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:height="27dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_Attendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/attendance"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_StudentName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/_00"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tv_Attendance"
            app:layout_constraintTop_toBottomOf="@+id/tv_StudentName" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card1"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:elevation="8dp"
        android:paddingBottom="5dp"
        android:layout_margin="10dp">

<!--android:id="@+id/rl_TimeTable"-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/rl_TimeTable"
                android:layout_width="80dp"
                android:layout_height="80dp">
                <ImageView
                    android:id="@+id/img_TimeTable"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/calendar"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timetable"
                android:textColor="@color/white"
                android:textAlignment="center"/>

        </LinearLayout>

<!--android:id="@+id/rl_Class"-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/rl_Class"
                android:layout_width="80dp"
                android:layout_height="80dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/blackboard"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/classtxt"
                android:textColor="@color/white"
                android:textAlignment="center"/>

        </LinearLayout>

<!--android:id="@+id/rl_Notice"-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/rl_Notice"
                android:layout_width="80dp"
                android:layout_height="80dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/megaphone"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noticetxt"
                android:textColor="@color/white"
                android:textAlignment="center"/>

        </LinearLayout>

<!--android:id="@+id/rl_Store"-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/rl_Store"
                android:layout_width="80dp"
                android:layout_height="80dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/store"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/store"
                android:textColor="@color/white"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ScrollView>
</LinearLayout>